@@ -13,8 +13,6 @@ final class OpenedPackages {
    * */
   static final List<String> getCommandLineArguments(CompilationContext compilationContext) {
     return Files.readAllLines(compilationContext.paths.communityHomeDir
-                                .resolve("platform/build-scripts/resources/OpenedPackages.txt"))
-      .stream()
-      .collect { "--add-opens=${it.toString()}".toString() }
+                                .resolve("plugins/devkit/devkit-core/src/run/OpenedPackages.txt"))
   }
 }
